// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Reporter .report calls flush on a spec file with full path 1`] = `
Array [
  Array [
    "a",
    "folder/path/to/spec.js",
    "b",
  ],
]
`;

exports[`Custom Reporter .report calls flush on a spec file with proper paths 1`] = `
Array [
  Array [
    "a",
    "folder/path/to/spec.js",
    "b",
  ],
]
`;

exports[`Custom Reporter .report translates relative paths to absolute paths 1`] = `
Array [
  Array [
    "a",
    "../folder/path/to/spec",
    "b",
  ],
]
`;
